src/components/orders/orders.module.css
.card {
    background-color: white;
    border-radius: 4px;
    box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.75);
    padding: 1rem;
    width: auto;
    margin: 0.5rem auto;
}

.card:nth-child(odd) {
    background-color: #f1f1f1;
}

.card:hover {
    background-color: #e1e1e1;
}

.edit-order-modal {
    width: 45rem;
}

.custom-autocomplete {
    width: 100%;
}

